--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="theme-color" content="#333333" />
+    <meta name="theme-color" content="#111111" />
+    <meta name="apple-mobile-web-app-title" content="Florentin" />
+    <meta name="application-name" content="Florentin" />
+    <link rel="canonical" href="https://florentin.design/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
