--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,32 @@
   <meta name="application-name" content="Florentin">
   <meta name="msapplication-TileColor" content="#222222">
   <meta name="theme-color" content="#eeeeee">
+
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://florentin.design">
+  <meta property="og:site_name" content="florentin.design">
+  <meta property="og:title" content="Florentin - Freelance Graphic Designer">
+  <meta property="og:description"
+    content="I'm Florentin, a designer based in a small town in Germany. I love designing logos, developing websites and creating posters.">
+  <meta property="og:image" content="%PUBLIC_URL%/meta/card.png">
+  <meta property="og:image:secure_url" content="%PUBLIC_URL%/meta/card.png">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@florentin">
+  <meta name="twitter:creator" content="@florentin">
+  <meta name="twitter:title" content="Florentin - Freelance Graphic Designer">
+  <meta name="twitter:description"
+    content="I'm Florentin, a designer based in a small town in Germany. I love designing logos, developing websites and creating posters.">
+  <meta name="twitter:image" content="%PUBLIC_URL%/meta/card.png">
+
+  <!-- Normal -->
   <title>Florentin | Freelance Graphic Designer</title>
+  <meta name="description"
+    content="I'm Florentin, a designer based in a small town in Germany. I love designing logos, developing websites and creating posters.">
 </head>
 
 <body>
