--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/meta/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/meta/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/meta/icons/favicon-16x16.png">
-  <link rel="manifest" href="%PUBLIC_URL%/meta/icons/manifest.json">
-  <link rel="mask-icon" href="%PUBLIC_URL%/meta/icons/safari-pinned-tab.svg" color="#222222">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#222222">
   <meta name="apple-mobile-web-app-title" content="Florentin">
   <meta name="application-name" content="Florentin">
   <meta name="msapplication-TileColor" content="#222222">
@@ -33,8 +33,8 @@
   <meta property="og:title" content="Florentin - Freelance Graphic Designer">
   <meta property="og:description"
     content="I'm Florentin, a designer based in a small town in Germany. I love designing logos, developing websites and creating posters.">
-  <meta property="og:image" content="%PUBLIC_URL%/meta/card.png">
-  <meta property="og:image:secure_url" content="%PUBLIC_URL%/meta/card.png">
+  <meta property="og:image" content="%PUBLIC_URL%/card.png">
+  <meta property="og:image:secure_url" content="%PUBLIC_URL%/card.png">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -43,7 +43,7 @@
   <meta name="twitter:title" content="Florentin - Freelance Graphic Designer">
   <meta name="twitter:description"
     content="I'm Florentin, a designer based in a small town in Germany. I love designing logos, developing websites and creating posters.">
-  <meta name="twitter:image" content="%PUBLIC_URL%/meta/card.png">
+  <meta name="twitter:image" content="%PUBLIC_URL%/card.png">
 
   <!-- Normal -->
   <title>Florentin | Freelance Graphic Designer</title>
