--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Florentin | Freelance Graphic Designer</title>
+  <script>window.prerenderReady = false;</script>
 </head>
 
 <body>
