:bento: Added Logo in 128x128 & 400x400

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
       href="%PUBLIC_URL%favicon.ico"
       type="image/x-icon"
     />
-    <meta property="og:logo" content="./logo.jpg" size="400x400" />
+    <meta property="og:logo" content="./logo-400.jpg" size="400x400" />
+    <meta property="og:logo" content="./logo-128.jpg" size="128x128" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
