:bento: Fixed URL to Logo Assets

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,16 @@
       href="%PUBLIC_URL%favicon.ico"
       type="image/x-icon"
     />
-    <meta property="og:logo" content="./logo-400.jpg" size="400x400" />
-    <meta property="og:logo" content="./logo-128.jpg" size="128x128" />
+    <meta
+      property="og:logo"
+      content="https://florentin.design/logo-400.jpg"
+      size="400x400"
+    />
+    <meta
+      property="og:logo"
+      content="https://florentin.design/logo-128.jpg"
+      size="128x128"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
